# EvalConvoLearn

./: .env-example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
data/: README.md
data/data_utils/: add_tutor_learner_mock_responses.py
data/eedi_tutoring/: __init__.py  export_eedi_tagging_review_samples.py  extract_tag_store_eedi_tutoring_conversations.py  tag_eedi_sampled_convs_with_metrics.py
data/florida-doe/: skill-space.csv  tagged-practice-items-with-responses.csv  tagged-practice-items.csv
data/florida-doe/data_cleaning/: generate_tutor_responses.py  skills-to-practice-items.py
data/florida-doe/oversampled_items/: oversampled-items-x10.csv
data/simulated_datasets/: simulate_flexlearner_dataset.py  simulation_utils.py
examples/: README.md
examples/base_learner/: binary_skill_learner.py  conversation_history_learner.py
examples/evaluations/: base_learner_learning_from_conversation.py  base_learner_multi_conv.py  base_learner_placement_test.py  base_learner_student_metrics.py  flexlearner_learning_from_conversation.py  flexlearner_multi_conv.py  flexlearner_placement_test.py  run_multiple_evaluations.py
examples/flexlearner/: flexlearner_binary_skills_basic_usage.py  flexlearner_conversation_history.py  flexlearner_knowledge_graph.py
examples/learner_utils/: create_and_load_learner_pool.py  manual_tutor.py
examples/paper_results/: README.md  analyze_evals_results.ipynb  eedi_fitted_learner_evals.py
src/evalconvolearn/: __init__.py
src/evalconvolearn/benchmarks/: README.md  __init__.py
src/evalconvolearn/benchmarks/base_learners/: __init__.py  base_learner_benchmarks.py  base_learner_learning_from_conversation_benchmark.py  base_learner_multi_conversations_benchmark.py  base_learner_placement_test_benchmark.py
src/evalconvolearn/benchmarks/flexlearners/: flexlearner_benchmark.py  learning_from_conversation_benchmark.py  multi_conversations_practice_benchmark.py  placement_test_benchmark.py
src/evalconvolearn/benchmarks/realistic_benchmarks_from_conversation_data/: __init__.py  dataset_fitted_benchmark_utils.py  dataset_fitted_conversational_benchmark.py
src/evalconvolearn/core/: README.md  base_learner.py  base_tutor.py  config.py  flexlearner.py  sdk.py
src/evalconvolearn/models/: README.md  base_learner_conversation.py  binary_skills_flexlearner.py  evaluation.py  evaluation_results.py  flexlearner_conversation.py  placement_test.py  practice_item.py  skill.py  tutor.py
src/evalconvolearn/services/: README.md  base_learner_evaluation_service.py  conversation_service.py  evaluation_service.py  session_service.py
src/evalconvolearn/storage/: README.md  base.py  file_storage.py
src/evalconvolearn/utils/: README.md  __init__.py  alignment_matrices.py  benchmark_metrics.py  benchmark_results.py  conversation_utils.py  data_loaders.py  learner_configs.py  llm_client.py  llm_evaluator.py
tests/: conftest.py
tests/integration/: conftest.py  test_learning_from_conversation.py  test_multi_conversations.py  test_placement_answers.py
tests/unit/: conftest.py  test_base_learner.py  test_conversation.py  test_flexlearner.py  test_tutor.py  test_utils.py
