[project]
name = "evalconvolearn"
version = "0.1.0"
description = "An open-source framework to evaluate learner simulations."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Baptiste Moreau-Pernet", email = "baptiste.moreaupernet@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx",
    "pandas>=2.3.3",
    "datasets>=3.2.0",
    "openai>=2.14.0",
    "langchain>=1.2.1",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "networkx>=3.6.1",
    "pydantic-settings>=2.12.0",
    "scikit-learn>=1.8.0",
    "aiohttp>=3.13.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
    "pre-commit",
    "pyright",
]
docs = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evalconvolearn"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = ["ANN401", "ANN101", "E501"]
select = [
  "F",
  "E",
  "I",
  "ANN",
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["tests"]
venvPath = "."
venv = ".venv"
reportGeneralTypeIssues = false
reportAttributeAccessIssue = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmark tests (deselect with '-m \"not benchmark\"')",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--log-cli-level=INFO",
    "-s",
]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
